changed color of tuple in editor and fixed shift key mistake for tuple creation

--- a/typescriptSrc/plaay-style.css
+++ b/typescriptSrc/plaay-style.css
@@ -654,9 +654,9 @@ div.dot {
 }
 
 div.tuple {
-    border:thin solid rgb(190, 133, 197) ; /* Mauve */
+    border:thin solid rgb(135,206,250) ; /* Blue */
     border-radius: 5px ;
-    color:rgb(190, 133, 197) ; /* Mauve */
+    color:rgb(135,206,250) ; /* Blue */
     font-family : "Times New Roman", Times,serif;
     font-weight:bold;
     font-size:large;
